popped into grid

--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,13 @@
 </head>
 
 <body>
-	<main class="main">
+<main class="main">	
+	<div class="grid-container">
+
+		<div class="grid-header">Shoren</div>
+		
+		<div class="grid-body">
+		
 		<form class="form" action="javascript:void(0);">
 			<input type="url" id="urlinput" placeholder="paste a long url" label="paste a long url" required>
 			<input type="text" maxlength="20" id="custominput" placeholder="custom alias" label="custom alias">
@@ -79,7 +85,13 @@
 			<div id="alias"></div>
 			<input type="text" id="shortenedURL" placeholder="Output" label="short url">
 			<div id="sucess"></div>
+		</div>		
+		
+		
+		
 		</div>
+		
+		<div class="grid-footer">
 		<div class="flex"></div>
 		<footer>
 			<a href="https://mnmlurl.ml">
@@ -96,6 +108,14 @@
 			</button>
 			<!--<p id="count"></p>-->
 		</footer>
+		</div>
+
+	
+	
+	</div>
+
+		
+		
 	</main>
 	<script src="index.js"></script>
 	<script>
